[metadata]
name = schema
version = attr: schema.__version__
description = Simple data validation library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/keleshev/schema
author = Vladimir Keleshev
author_email = vladimir@keleshev.com
license = MIT
license_file = LICENSE-MIT
license_files = LICENSE-MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords =
    schema
    json
    validation

[options]
packages = find:
install_requires =
    contextlib2>=0.5.5
python_requires = >=2.6, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True

[options.extras_require]
dev =
    black
    flake8
    mock
    pre-commit
    pytest
    setuptools>=46.4.0
    tox
    types-setuptools

[options.package_data]
* = py.typed, *.pyi

[wheel]
universal = 1

[semantic_release]
version_variable = schema.py:__version__

[flake8]
exclude = wsgi.py,env/*,*/migrations/*,venv/*,local_settings.py,doc/*,webpush/*,*.html,setup.cfg
ignore = E501,W503

[isort]
include_trailing_comma = true
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
skip = migrations,node_modules

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 120
target-version = 'py37'
include = '\.pyi?$'
exclude =
    .eggs         # exclude a few common directories in the
    .git          # root of the project
    .hg
    .mypy_cache
    .tox
    .venv
    _build
    buck-out
    build
    dist
